--- a/PythonApp/PythonApp.csproj
+++ b/PythonApp/PythonApp.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <RegisterForComInterop>false</RegisterForComInterop>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,7 +33,7 @@
   <ItemGroup>
     <Reference Include="ExcelDna.Integration, Version=0.34.6373.42344, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ExcelDna.Integration.0.34.6\lib\ExcelDna.Integration.dll</HintPath>
-      <Private>False</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Dynamic, Version=1.1.2.22, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamicLanguageRuntime.1.1.2\lib\Net45\Microsoft.Dynamic.dll</HintPath>
@@ -66,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Environment\CurrentUI.cs" />
     <Compile Include="Environment\KeyboardHook.cs" />
+    <Compile Include="FunctionHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -87,6 +89,10 @@
     <ProjectReference Include="..\DockSample\DockSample.csproj">
       <Project>{40793a27-478b-4357-b4c3-fc8943131f3d}</Project>
       <Name>DockSample</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PythonExecution\python.csproj">
+      <Project>{33e194d2-3780-4583-977f-446d7a4109f1}</Project>
+      <Name>python</Name>
     </ProjectReference>
     <ProjectReference Include="..\WinFormsUI\ThemeVS2003.csproj">
       <Project>{719f0f69-66da-438d-b5bb-2d883ef4ace2}</Project>
