--- a/PythonExecution/packages.config
+++ b/PythonExecution/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DynamicLanguageRuntime" version="1.1.2" targetFramework="net452" />
-  <package id="IronPython" version="2.7.7" targetFramework="net452" />
+  <package id="IronPython" version="2.7.7" targetFramework="net45" />
+  <package id="Python35" version="3.5.1.1" targetFramework="net45" />
 </packages>
