--- a/PythonExecution/packages.config
+++ b/PythonExecution/packages.config
@@ -3,4 +3,5 @@
   <package id="DynamicLanguageRuntime" version="1.1.2" targetFramework="net452" />
   <package id="IronPython" version="2.7.7" targetFramework="net45" />
   <package id="Python35" version="3.5.1.1" targetFramework="net45" />
+  <package id="pythonnet" version="2.3.0-py35-dotnet" targetFramework="net45" />
 </packages>
